fixed src bttn not working on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,7 +16,7 @@
     align-items: center;
     width: 400px;
     max-width: 600px;
-    z-index: 999;
+    z-index: 1;
 }
 
 
